--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "dependencies": {
     "@react-navigation/bottom-tabs": "^6.0.5",
     "@react-navigation/native": "^6.0.2",
+    "@react-navigation/native-stack": "^6.2.3",
+    "@react-navigation/stack": "^6.0.10",
     "axios": "^0.22.0",
     "expo": "~42.0.1",
     "expo-status-bar": "~1.0.4",
