--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
     "react-native-appearance": "~0.3.3",
     "react-native-elements": "^3.4.2",
+    "react-native-gifted-chat": "^0.16.3",
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.4.0",
     "react-native-vector-icons": "^8.1.0",
     "react-native-web": "^0.17.5",
+    "react-native-webview": "^11.14.3",
     "react-native-youtube-iframe": "^2.2.0"
   },
   "devDependencies": {
