--- a/package.json
+++ b/package.json
@@ -14,14 +14,15 @@
     "@react-navigation/stack": "^6.0.10",
     "axios": "^0.22.0",
     "expo": "~42.0.1",
+    "expo-google-app-auth": "~8.2.5",
     "expo-status-bar": "~1.0.4",
     "firebase": "8.2.3",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "react-firebase-hooks": "3.0.3",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
     "react-native-appearance": "~0.3.3",
     "react-native-elements": "^3.4.2",
-    "react-native-gifted-chat": "^0.16.3",
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.4.0",
     "react-native-vector-icons": "^8.1.0",
