--- a/package.json
+++ b/package.json
@@ -13,21 +13,23 @@
     "@react-navigation/native-stack": "^6.2.3",
     "@react-navigation/stack": "^6.0.10",
     "axios": "^0.22.0",
-    "expo": "~42.0.1",
-    "expo-google-app-auth": "~8.2.5",
-    "expo-status-bar": "~1.0.4",
+    "expo": "~44.0.1",
+    "expo-google-app-auth": "~8.3.0",
+    "expo-status-bar": "~1.2.0",
+    "expo-updates": "~0.11.7",
     "firebase": "8.2.3",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-firebase-hooks": "3.0.3",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-44.0.0.tar.gz",
     "react-native-appearance": "~0.3.3",
     "react-native-elements": "^3.4.2",
-    "react-native-safe-area-context": "3.2.0",
-    "react-native-screens": "~3.4.0",
+    "react-native-safe-area-context": "3.3.2",
+    "react-native-screens": "~3.10.1",
     "react-native-vector-icons": "^8.1.0",
     "react-native-web": "^0.17.5",
-    "react-native-webview": "^11.14.3",
+    "react-native-web-webview": "^1.0.2",
+    "react-native-webview": "11.15.0",
     "react-native-youtube-iframe": "^2.2.0"
   },
   "devDependencies": {
